# anime-downloader

./: Cargo.toml  README.md  settings.yaml
src/: anime.rs  generic_error.rs  main.rs  metadata.rs  metadata_extractor.rs  result.rs  rss_feed.rs  settings.rs
src/feed_source/: erairaws_source.rs  mod.rs  source.rs
