[package]
name = "anime-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21.2"
rss = "2.0"
regex = "1"
async-trait = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
futures = "*"
guid-create = "0.2.0"
# async-std = "1.12.0"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.mongodb]
version = "2.3.0"
features = ["tokio-sync"]